src/OpenCvSharp.Native/include/open_cv_sharp/calib3d/calib3d.h

OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_estimate_affine_3d_ransac(
    const jyppx_ocv_mat* source,
    const jyppx_ocv_mat* destination,
    jyppx_ocv_mat* transform,
    jyppx_ocv_mat* inliers,
    double ransac_threshold,
    double confidence,
    int* found);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_estimate_affine_3d_umeyama(
    const jyppx_ocv_mat* source,
    const jyppx_ocv_mat* destination,
    jyppx_ocv_mat* transform,
    int force_rotation,
    double* scale);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_estimate_affine_2d(
    const jyppx_ocv_mat* source,
    const jyppx_ocv_mat* destination,
    jyppx_ocv_mat* transform,
    jyppx_ocv_mat* inliers,
    int method,
    double ransac_reproj_threshold,
    int max_iters,
    double confidence,
    int refine_iters);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_estimate_affine_partial_2d(
    const jyppx_ocv_mat* source,
    const jyppx_ocv_mat* destination,
    jyppx_ocv_mat* transform,
    jyppx_ocv_mat* inliers,
    int method,
    double ransac_reproj_threshold,
    int max_iters,
    double confidence,
    int refine_iters);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_decompose_homography_mat(
    const jyppx_ocv_mat* homography,
    const jyppx_ocv_mat* camera_matrix,
    jyppx_ocv_mat* const* rotations,
    jyppx_ocv_mat* const* translations,
    jyppx_ocv_mat* const* normals,
    int output_capacity,
    int* solution_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_filter_homography_decomp_by_visible_refpoints(
    const jyppx_ocv_mat* const* rotations,
    int rotation_count,
    const jyppx_ocv_mat* const* normals,
    int normal_count,
    const jyppx_ocv_mat* before_points,
    const jyppx_ocv_mat* after_points,
    jyppx_ocv_mat* possible_solutions,
    const jyppx_ocv_mat* points_mask);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_convert_points_to_homogeneous(
    const jyppx_ocv_mat* source,
    jyppx_ocv_mat* destination,
    int dtype);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_convert_points_from_homogeneous(
    const jyppx_ocv_mat* source,
    jyppx_ocv_mat* destination,
    int dtype);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_correct_matches(
    const jyppx_ocv_mat* fundamental,
    const jyppx_ocv_mat* points1,
    const jyppx_ocv_mat* points2,
    jyppx_ocv_mat* corrected_points1,
    jyppx_ocv_mat* corrected_points2);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_sampson_distance(
    const jyppx_ocv_mat* point1,
    const jyppx_ocv_mat* point2,
    const jyppx_ocv_mat* fundamental,
    double* distance);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_triangulate_points(
    const jyppx_ocv_mat* proj_matr1,
    const jyppx_ocv_mat* proj_matr2,
    const jyppx_ocv_mat* proj_points1,
    const jyppx_ocv_mat* proj_points2,
    jyppx_ocv_mat* points4d);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_undistort_points(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    const jyppx_ocv_mat* r,
    const jyppx_ocv_mat* p,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_undistort_image_points(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_filter_speckles(
    jyppx_ocv_mat* image,
    double new_value,
    int max_speckle_size,
    double max_difference,
    jyppx_ocv_mat* buffer);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_get_valid_disparity_roi(
    int roi1_x,
    int roi1_y,
    int roi1_width,
    int roi1_height,
    int roi2_x,
    int roi2_y,
    int roi2_width,
    int roi2_height,
    int min_disparity,
    int number_of_disparities,
    int block_size,
    int* result_x,
    int* result_y,
    int* result_width,
    int* result_height);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_validate_disparity(
    jyppx_ocv_mat* disparity,
    const jyppx_ocv_mat* cost,
    int min_disparity,
    int number_of_disparities,
    int disp12_max_difference);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_reproject_image_to_3d(
    const jyppx_ocv_mat* disparity,
    jyppx_ocv_mat* image3d,
    const jyppx_ocv_mat* q,
    int handle_missing_values,
    int ddepth);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_init_undistort_rectify_map(
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    const jyppx_ocv_mat* r,
    const jyppx_ocv_mat* new_camera_matrix,
    int size_width,
    int size_height,
    int m1type,
    jyppx_ocv_mat* map1,
    jyppx_ocv_mat* map2);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_stereo_rectify(
    const jyppx_ocv_mat* camera_matrix1,
    const jyppx_ocv_mat* dist_coeffs1,
    const jyppx_ocv_mat* camera_matrix2,
    const jyppx_ocv_mat* dist_coeffs2,
    int image_width,
    int image_height,
    const jyppx_ocv_mat* r,
    const jyppx_ocv_mat* t,
    jyppx_ocv_mat* r1,
    jyppx_ocv_mat* r2,
    jyppx_ocv_mat* p1,
    jyppx_ocv_mat* p2,
    jyppx_ocv_mat* q,
    int flags,
    double alpha,
    int new_image_width,
    int new_image_height,
    int* roi1_x,
    int* roi1_y,
    int* roi1_width,
    int* roi1_height,
    int* roi2_x,
    int* roi2_y,
    int* roi2_width,
    int* roi2_height);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_solve_pnp_generic(
    const jyppx_ocv_mat* object_points,
    const jyppx_ocv_mat* image_points,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    jyppx_ocv_mat* rvecs,
    jyppx_ocv_mat* tvecs,
    int use_extrinsic_guess,
    int flags,
    const jyppx_ocv_mat* rvec,
    const jyppx_ocv_mat* tvec,
    jyppx_ocv_mat* reprojection_error,
    int* solution_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_solve_p3p(
    const jyppx_ocv_mat* object_points,
    const jyppx_ocv_mat* image_points,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    jyppx_ocv_mat* rvecs,
    jyppx_ocv_mat* tvecs,
    int flags,
    int* solution_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_mat_mul_deriv(
    const jyppx_ocv_mat* a,
    const jyppx_ocv_mat* b,
    jyppx_ocv_mat* d_ab_d_a,
    jyppx_ocv_mat* d_ab_d_b);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_solve_pnp_refine_lm(
    const jyppx_ocv_mat* object_points,
    const jyppx_ocv_mat* image_points,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    jyppx_ocv_mat* rvec,
    jyppx_ocv_mat* tvec,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_solve_pnp_refine_vvs(
    const jyppx_ocv_mat* object_points,
    const jyppx_ocv_mat* image_points,
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    jyppx_ocv_mat* rvec,
    jyppx_ocv_mat* tvec,
    int criteria_type,
    int criteria_max_count,
    double criteria_epsilon,
    double vvs_lambda);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_find_chessboard_corners(
    const jyppx_ocv_mat* image,
    int pattern_width,
    int pattern_height,
    jyppx_ocv_mat* corners,
    int flags,
    int* found);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_find_chessboard_corners_sb(
    const jyppx_ocv_mat* image,
    int pattern_width,
    int pattern_height,
    jyppx_ocv_mat* corners,
    int flags,
    int* found);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_find_chessboard_corners_sb_with_meta(
    const jyppx_ocv_mat* image,
    int pattern_width,
    int pattern_height,
    jyppx_ocv_mat* corners,
    int flags,
    jyppx_ocv_mat* meta,
    int* found);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_estimate_chessboard_sharpness(
    const jyppx_ocv_mat* image,
    int pattern_width,
    int pattern_height,
    const jyppx_ocv_mat* corners,
    float rise_distance,
    int vertical,
    jyppx_ocv_mat* sharpness,
    double* value0,
    double* value1,
    double* value2,
    double* value3);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_find_4_quad_corner_subpix(
    const jyppx_ocv_mat* image,
    jyppx_ocv_mat* corners,
    int region_width,
    int region_height,
    int* found);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_check_chessboard(
    const jyppx_ocv_mat* image,
    int pattern_width,
    int pattern_height,
    int* found);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_find_circles_grid(
    const jyppx_ocv_mat* image,
    int pattern_width,
    int pattern_height,
    jyppx_ocv_mat* centers,
    int flags,
    int* found);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_draw_chessboard_corners(
    jyppx_ocv_mat* image,
    int pattern_width,
    int pattern_height,
    const jyppx_ocv_mat* corners,
    int pattern_was_found);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_get_default_new_camera_matrix(
    const jyppx_ocv_mat* camera_matrix,
    int image_width,
    int image_height,
    int center_principal_point,
    jyppx_ocv_mat* new_camera_matrix);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_get_undistort_rectangles(
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    const jyppx_ocv_mat* r,
    const jyppx_ocv_mat* new_camera_matrix,
    int image_width,
    int image_height,
    double* inner_x,
    double* inner_y,
    double* inner_width,
    double* inner_height,
    double* outer_x,
    double* outer_y,
    double* outer_width,
    double* outer_height);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_get_optimal_new_camera_matrix(
    const jyppx_ocv_mat* camera_matrix,
    const jyppx_ocv_mat* dist_coeffs,
    int image_width,
    int image_height,
    double alpha,
    int new_image_width,
    int new_image_height,
    int center_principal_point,
    int* roi_x,
    int* roi_y,
    int* roi_width,
    int* roi_height,
    jyppx_ocv_mat** new_camera_matrix);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_calib3d_calibration_matrix_values(
    const jyppx_ocv_mat* camera_matrix,
    int image_width,
    int image_height,
    double aperture_width,
    double aperture_height,
    double* fov_x,
    double* fov_y,
    double* focal_length,
    double* principal_point_x,
    double* principal_point_y,
    double* aspect_ratio);