src/OpenCvSharp/Internal/Interop/NativeMethods.Calib3D.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_estimate_affine_3d_ransac")]
        internal static partial int Calib3DEstimateAffine3DRansac(IntPtr source, IntPtr destination, IntPtr transform, IntPtr inliers, double ransacThreshold, double confidence, out int found);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_estimate_affine_3d_umeyama")]
        internal static partial int Calib3DEstimateAffine3DUmeyama(IntPtr source, IntPtr destination, IntPtr transform, int forceRotation, out double scale);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_estimate_affine_2d")]
        internal static partial int Calib3DEstimateAffine2D(IntPtr source, IntPtr destination, IntPtr transform, IntPtr inliers, int method, double ransacReprojThreshold, int maxIters, double confidence, int refineIters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_estimate_affine_partial_2d")]
        internal static partial int Calib3DEstimateAffinePartial2D(IntPtr source, IntPtr destination, IntPtr transform, IntPtr inliers, int method, double ransacReprojThreshold, int maxIters, double confidence, int refineIters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_decompose_homography_mat")]
        internal static partial int Calib3DDecomposeHomographyMat(IntPtr homography, IntPtr cameraMatrix, IntPtr* rotations, IntPtr* translations, IntPtr* normals, int outputCapacity, out int solutionCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_filter_homography_decomp_by_visible_refpoints")]
        internal static partial int Calib3DFilterHomographyDecompByVisibleRefpoints(IntPtr* rotations, int rotationCount, IntPtr* normals, int normalCount, IntPtr beforePoints, IntPtr afterPoints, IntPtr possibleSolutions, IntPtr pointsMask);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_convert_points_to_homogeneous")]
        internal static partial int Calib3DConvertPointsToHomogeneous(IntPtr source, IntPtr destination, int dtype);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_convert_points_from_homogeneous")]
        internal static partial int Calib3DConvertPointsFromHomogeneous(IntPtr source, IntPtr destination, int dtype);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_correct_matches")]
        internal static partial int Calib3DCorrectMatches(IntPtr fundamental, IntPtr points1, IntPtr points2, IntPtr correctedPoints1, IntPtr correctedPoints2);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_sampson_distance")]
        internal static partial int Calib3DSampsonDistance(IntPtr point1, IntPtr point2, IntPtr fundamental, out double distance);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_triangulate_points")]
        internal static partial int Calib3DTriangulatePoints(IntPtr projMatr1, IntPtr projMatr2, IntPtr projPoints1, IntPtr projPoints2, IntPtr points4D);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_undistort_points")]
        internal static partial int Calib3DUndistortPoints(IntPtr src, IntPtr dst, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr r, IntPtr p, int criteriaType, int criteriaMaxCount, double criteriaEpsilon);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_undistort_image_points")]
        internal static partial int Calib3DUndistortImagePoints(IntPtr src, IntPtr dst, IntPtr cameraMatrix, IntPtr distCoeffs, int criteriaType, int criteriaMaxCount, double criteriaEpsilon);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_filter_speckles")]
        internal static partial int Calib3DFilterSpeckles(IntPtr image, double newValue, int maxSpeckleSize, double maxDifference, IntPtr buffer);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_get_valid_disparity_roi")]
        internal static partial int Calib3DGetValidDisparityROI(int roi1X, int roi1Y, int roi1Width, int roi1Height, int roi2X, int roi2Y, int roi2Width, int roi2Height, int minDisparity, int numberOfDisparities, int blockSize, out int resultX, out int resultY, out int resultWidth, out int resultHeight);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_validate_disparity")]
        internal static partial int Calib3DValidateDisparity(IntPtr disparity, IntPtr cost, int minDisparity, int numberOfDisparities, int disp12MaxDifference);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_reproject_image_to_3d")]
        internal static partial int Calib3DReprojectImageTo3D(IntPtr disparity, IntPtr image3D, IntPtr q, int handleMissingValues, int ddepth);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_init_undistort_rectify_map")]
        internal static partial int Calib3DInitUndistortRectifyMap(IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr r, IntPtr newCameraMatrix, int sizeWidth, int sizeHeight, int m1type, IntPtr map1, IntPtr map2);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_stereo_rectify")]
        internal static partial int Calib3DStereoRectify(IntPtr cameraMatrix1, IntPtr distCoeffs1, IntPtr cameraMatrix2, IntPtr distCoeffs2, int imageWidth, int imageHeight, IntPtr r, IntPtr t, IntPtr r1, IntPtr r2, IntPtr p1, IntPtr p2, IntPtr q, int flags, double alpha, int newImageWidth, int newImageHeight, out int roi1X, out int roi1Y, out int roi1Width, out int roi1Height, out int roi2X, out int roi2Y, out int roi2Width, out int roi2Height);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_solve_pnp_generic")]
        internal static partial int Calib3DSolvePnPGeneric(IntPtr objectPoints, IntPtr imagePoints, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr rvecs, IntPtr tvecs, int useExtrinsicGuess, int flags, IntPtr rvec, IntPtr tvec, IntPtr reprojectionError, out int solutionCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_solve_p3p")]
        internal static partial int Calib3DSolveP3P(IntPtr objectPoints, IntPtr imagePoints, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr rvecs, IntPtr tvecs, int flags, out int solutionCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_mat_mul_deriv")]
        internal static partial int Calib3DMatMulDeriv(IntPtr a, IntPtr b, IntPtr dABdA, IntPtr dABdB);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_solve_pnp_refine_lm")]
        internal static partial int Calib3DSolvePnPRefineLM(IntPtr objectPoints, IntPtr imagePoints, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr rvec, IntPtr tvec, int criteriaType, int criteriaMaxCount, double criteriaEpsilon);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_solve_pnp_refine_vvs")]
        internal static partial int Calib3DSolvePnPRefineVVS(IntPtr objectPoints, IntPtr imagePoints, IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr rvec, IntPtr tvec, int criteriaType, int criteriaMaxCount, double criteriaEpsilon, double vvsLambda);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_find_chessboard_corners")]
        internal static partial int Calib3DFindChessboardCorners(IntPtr image, int patternWidth, int patternHeight, IntPtr corners, int flags, out int found);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_find_chessboard_corners_sb")]
        internal static partial int Calib3DFindChessboardCornersSB(IntPtr image, int patternWidth, int patternHeight, IntPtr corners, int flags, out int found);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_find_chessboard_corners_sb_with_meta")]
        internal static partial int Calib3DFindChessboardCornersSBWithMeta(IntPtr image, int patternWidth, int patternHeight, IntPtr corners, int flags, IntPtr meta, out int found);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_estimate_chessboard_sharpness")]
        internal static partial int Calib3DEstimateChessboardSharpness(IntPtr image, int patternWidth, int patternHeight, IntPtr corners, float riseDistance, int vertical, IntPtr sharpness, out double value0, out double value1, out double value2, out double value3);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_find_4_quad_corner_subpix")]
        internal static partial int Calib3DFind4QuadCornerSubpix(IntPtr image, IntPtr corners, int regionWidth, int regionHeight, out int found);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_check_chessboard")]
        internal static partial int Calib3DCheckChessboard(IntPtr image, int patternWidth, int patternHeight, out int found);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_find_circles_grid")]
        internal static partial int Calib3DFindCirclesGrid(IntPtr image, int patternWidth, int patternHeight, IntPtr centers, int flags, out int found);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_draw_chessboard_corners")]
        internal static partial int Calib3DDrawChessboardCorners(IntPtr image, int patternWidth, int patternHeight, IntPtr corners, int patternWasFound);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_get_default_new_camera_matrix")]
        internal static partial int Calib3DGetDefaultNewCameraMatrix(IntPtr cameraMatrix, int imageWidth, int imageHeight, int centerPrincipalPoint, IntPtr newCameraMatrix);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_get_undistort_rectangles")]
        internal static partial int Calib3DGetUndistortRectangles(IntPtr cameraMatrix, IntPtr distCoeffs, IntPtr r, IntPtr newCameraMatrix, int imageWidth, int imageHeight, out double innerX, out double innerY, out double innerWidth, out double innerHeight, out double outerX, out double outerY, out double outerWidth, out double outerHeight);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_get_optimal_new_camera_matrix")]
        internal static partial int Calib3DGetOptimalNewCameraMatrix(IntPtr cameraMatrix, IntPtr distCoeffs, int imageWidth, int imageHeight, double alpha, int newImageWidth, int newImageHeight, int centerPrincipalPoint, out int roiX, out int roiY, out int roiWidth, out int roiHeight, out IntPtr newCameraMatrix);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_calib3d_calibration_matrix_values")]
        internal static partial int Calib3DCalibrationMatrixValues(IntPtr cameraMatrix, int imageWidth, int imageHeight, double apertureWidth, double apertureHeight, out double fovX, out double fovY, out double focalLength, out double principalPointX, out double principalPointY, out double aspectRatio);
